<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Default Launcher</string>
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="shortcut_not_available">Shortcut isn\'t available</string>
    <string name="home_screen">Home</string>
    <string name="set_default_home_app">Set <xliff:g id="launcher_name" example="Launcher3">%1$s</xliff:g> as default home app in Settings</string>
    <string name="recent_task_option_split_screen">Split screen</string>
    <string name="recent_task_option_aspect_ratio">Change aspect ratio</string>
    <string name="split_app_info_accessibility">App info for %1$s</string>
    <string name="split_app_usage_settings">Usage settings for %1$s</string>
    <string name="new_window_option_taskbar">New Window</string>
    <string name="manage_windows_option_taskbar">Manage Windows</string>
    <string name="save_app_pair">Save app pair</string>
    <string name="app_pair_default_title"><xliff:g id="app1" example="Chrome">%1$s</xliff:g> | <xliff:g id="app2" example="YouTube">%2$s</xliff:g></string>
    <string name="app_pair_unlaunchable_at_screen_size">This app pair isn\'t supported on this device</string>
    <string name="app_pair_needs_unfold">Unfold device to use this app pair</string>
    <string name="app_pair_not_available">App pair isn\'t available</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to move a widget.</string>
    <string name="long_accessible_way_to_add">Double-tap &amp; hold to move a widget or use custom actions.</string>
    <string name="widget_picker_widget_options_button_description">More options</string>
    <string name="widget_picker_show_all_widgets_menu_item_title">Show all widgets</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="widget_accessible_dims_format">%1$d wide by %2$d high</string>
    <string name="widget_preview_context_description"><xliff:g id="widget_name" example="Calendar month view">%1$s</xliff:g> widget</string>
    <string name="widget_preview_name_and_dims_content_description">
        <xliff:g id="widget_name" example="Calendar month view">%1$s</xliff:g> widget, %2$d wide by %3$d high
    </string>
    <string name="add_item_request_drag_hint">Touch &amp; hold the widget to move it around the home screen</string>
    <string name="add_to_home_screen">Add to home screen</string>
    <string name="added_to_home_screen_accessibility_text"><xliff:g id="widget_name" example="Calendar month view">%1$s</xliff:g> widget added to home screen</string>
    <string name="suggested_widgets_header_title">Suggestions</string>
    <string name="productivity_widget_recommendation_category_label">Essentials</string>
    <string name="news_widget_recommendation_category_label">News &amp; magazines</string>
    <string name="entertainment_widget_recommendation_category_label">Entertainment</string>
    <string name="social_widget_recommendation_category_label">Social</string>
    <string name="others_widget_recommendation_category_label">Suggested for you</string>
    <string name="widget_picker_right_pane_accessibility_title"><xliff:g id="selected_header" example="Calendar">%1$s</xliff:g> widgets on right, search and options on left</string>
    <string name="widgets_count">
        {count, plural, =1{# widget} other{# widgets}}
    </string>
    <string name="shortcuts_count">
        {count, plural, =1{# shortcut} other{# shortcuts}}
    </string>
    <string name="widgets_and_shortcuts_count"><xliff:g id="widgets_count" example="5 widgets">%1$s</xliff:g>, <xliff:g id="shortcuts_count" example="1 shortcut">%2$s</xliff:g></string>
    <string name="widget_button_text">Widgets</string>
    <string name="widgets_full_sheet_search_bar_hint">Search</string>
    <string name="widgets_full_sheet_cancel_button_description">Clear text from search box</string>
    <string name="no_widgets_available">Widgets and shortcuts aren\'t available</string>
    <string name="no_search_results">No widgets or shortcuts found</string>
    <string name="widgets_full_sheet_personal_tab">Personal</string>
    <string name="widgets_full_sheet_work_tab">Work</string>
    <string name="widget_category_conversations">Conversations</string>
    <string name="widget_category_note_taking">Note-taking</string>
    <string name="widget_cell_tap_to_show_add_button_label">Show add button</string>
    <string name="widget_cell_tap_to_hide_add_button_label">Hide add button</string>
    <string name="widget_add_button_label">Add</string>
    <string name="widget_add_button_content_description">Add <xliff:g id="widget_name" example="Calendar month view">%1$s</xliff:g> widget</string>
    <string name="widgets_list_expand_button_label">Show all</string>
    <string name="widgets_list_expand_button_content_description">Show all widgets</string>
    <string name="widgets_list_expanded">Showing all widgets</string>
    <string name="reconfigurable_widget_education_tip">Tap to change widget settings</string>
    <string name="widget_reconfigure_button_content_description">Change widget settings</string>
    <string name="all_apps_search_bar_hint">Search</string>
    <string name="all_apps_loading_message">Loading apps&#8230;</string>
    <string name="all_apps_no_search_results">No results found for \"<xliff:g id="query" example="Android">%1$s</xliff:g>\"</string>
    <string name="label_application">App</string>
    <string name="all_apps_label">All apps</string>
    <string name="all_apps_list_label">Apps list</string>
    <string name="notifications_header">Notifications</string>
    <string name="long_press_shortcut_to_add">Touch &amp; hold to move a shortcut.</string>
    <string name="long_accessible_way_to_add_shortcut">Double-tap &amp; hold to move a shortcut or use custom actions.</string>
    <string name="out_of_space">No room on this home screen</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_search_results">Search results</string>
    <string name="all_apps_button_personal_label">Personal apps list</string>
    <string name="all_apps_button_work_label">Work apps list</string>
    <string name="remove_drop_target_label">Remove</string>
    <string name="uninstall_drop_target_label">Uninstall</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="install_private_system_shortcut_label">Install in private</string>
    <string name="uninstall_private_system_shortcut_label">Uninstall app</string>
    <string name="install_drop_target_label">Install</string>
    <string name="dismiss_prediction_label">Don\'t suggest app</string>
    <string name="pin_prediction">Pin Prediction</string>
    <string name="bubble">Bubble</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in home.</string>
    <string name="permlab_write_settings">write home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in home.</string>
    <string name="gadget_error_text">Can\'t load widget</string>
    <string name="gadget_setup_text">Widget settings</string>
    <string name="gadget_complete_setup_text">Tap to finish setup</string>
    <string name="grid_columns_title">Grid columns</string>
    <string name="workspace_top_padding_title">Top padding (dp)</string>
    <string name="workspace_bottom_padding_title">Bottom padding (dp)</string>
    <string name="allapps_row_gap_title">Row gap</string>
    <string name="home_screen_title">Home Screen</string>
    <string name="app_drawer_title">App Drawer</string>
    <string name="search_categories_title">Search categories</string>
    <string name="search_apps_title">Apps</string>
    <string name="search_shortcuts_title">App shortcuts</string>
    <string name="search_contacts_title">Contacts</string>
    <string name="search_contacts_summary">Requires contacts permission</string>
    <string name="search_calendar_title">Calendar</string>
    <string name="search_calendar_summary">Requires calendar permission</string>
    <string name="search_files_title">Files</string>
    <string name="search_files_summary">Requires file access permission</string>
    <string name="search_calculator_title">Calculator</string>
    <string name="search_unit_converter_title">Unit converter</string>
    <string name="search_behavior_title">Behavior</string>
    <string name="search_web_app_title">Web search app</string>
    <string name="search_web_app_summary">Choose which app handles web searches</string>
    <string name="home_screen_icons_category">Icons</string>
    <string name="grids_title">Grids</string>
    <string name="drawer_icons_category">Icons</string>
    <string name="drawer_labels_category">Labels</string>
    <string name="drawer_layout_category">Layout</string>
    <string name="allapps_label_size_title">Label size</string>
    <string name="allapps_twoline_title">Two-line labels</string>
    <string name="allapps_twoline_summary">Show app names on two lines</string>
    <string name="icon_pack_title">Icon pack</string>
    <string name="icon_pack_default">System default</string>
    <string name="icon_shape_title">Icon shape</string>
    <string name="icon_shape_default">System default</string>
    <string name="icon_size_title">Icon size</string>
    <string name="icon_size_default">XL (100%)</string>
    <string name="colors_title">Colors</string>
    <string name="colors_drawer_category">App Drawer</string>
    <string name="colors_search_category">Search</string>
    <string name="colors_tabs_category">Personal / Work Tabs</string>
    <string name="drawer_bg_color_title">Drawer background</string>
    <string name="drawer_bg_opacity_title">Background opacity</string>
    <string name="drawer_search_bg_color_title">Search bar background</string>
    <string name="drawer_scrollbar_color_title">Scrollbar</string>
    <string name="drawer_hide_tabs_title">Hide tabs</string>
    <string name="drawer_hide_tabs_summary">Hide personal/work tab bar</string>
    <string name="drawer_tab_selected_color_title">Selected tab</string>
    <string name="drawer_tab_unselected_color_title">Unselected tab</string>
    <string name="clock_widget_title">Clock widget</string>
    <string name="clock_widget_summary">Style, format, color</string>
    <string name="clock_alignment_title">Alignment</string>
    <string name="clock_time_format_title">Time format</string>
    <string name="clock_color_mode_title">Color</string>
    <string name="clock_time_color_title">Time color</string>
    <string name="clock_date_color_title">Date color</string>
    <string name="clock_shadow_title">Shadow</string>
    <string name="clock_shadow_summary">Drop a soft shadow behind the clock</string>
    <string name="clock_outline_title">Outline (cutout)</string>
    <string name="clock_outline_summary">Render the clock as a stroked outline so the wallpaper shows through</string>
    <string name="clock_stroke_width_title">Outline thickness</string>
    <string name="search_widget_settings_title">Search widget</string>
    <string name="search_widget_settings_summary">Background and text color</string>
</resources>