<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:launcher="http://schemas.android.com/apk/res-auto"
    android:title="@string/app_drawer_title">

    <PreferenceCategory
        android:title="@string/drawer_icons_category"
        launcher:iconSpaceReserved="false">

        <Preference
            android:key="pref_icon_pack"
            android:title="@string/icon_pack_title"
            android:summary="@string/icon_pack_default"
            launcher:iconSpaceReserved="false" />

        <Preference
            android:key="pref_icon_shape"
            android:title="@string/icon_shape_title"
            android:summary="@string/icon_shape_default"
            launcher:iconSpaceReserved="false" />

        <Preference
            android:key="pref_icon_size_scale"
            android:title="@string/icon_size_title"
            android:summary="@string/icon_size_default"
            android:layout="@layout/preference_icon_size"
            launcher:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/drawer_labels_category"
        launcher:iconSpaceReserved="false">

        <com.android.launcher3.settings.M3SliderPreference
            android:key="pref_allapps_label_size"
            android:title="@string/allapps_label_size_title"
            android:defaultValue="14"
            android:max="18"
            launcher:min="10"
            launcher:showSeekBarValue="true"
            launcher:iconSpaceReserved="false" />

        <SwitchPreference
            android:key="pref_enable_two_line_toggle"
            android:title="@string/allapps_twoline_title"
            android:summary="@string/allapps_twoline_summary"
            android:defaultValue="false"
            launcher:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/drawer_layout_category"
        launcher:iconSpaceReserved="false">

        <com.android.launcher3.settings.M3SliderPreference
            android:key="pref_allapps_row_gap"
            android:title="@string/allapps_row_gap_title"
            android:defaultValue="16"
            android:max="32"
            launcher:min="16"
            launcher:showSeekBarValue="true"
            launcher:iconSpaceReserved="false" />

        <SwitchPreference
            android:key="pref_drawer_hide_tabs"
            android:title="@string/drawer_hide_tabs_title"
            android:summary="@string/drawer_hide_tabs_summary"
            android:defaultValue="false"
            launcher:iconSpaceReserved="false" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
