<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:launcher="http://schemas.android.com/apk/res-auto"
    android:title="@string/home_screen_title">

    <PreferenceCategory
        android:title="@string/home_screen_icons_category"
        launcher:iconSpaceReserved="false">

        <Preference
            android:key="pref_icon_pack"
            android:title="@string/icon_pack_title"
            android:summary="@string/icon_pack_default"
            launcher:iconSpaceReserved="false" />

        <Preference
            android:key="pref_icon_shape"
            android:title="@string/icon_shape_title"
            android:summary="@string/icon_shape_default"
            launcher:iconSpaceReserved="false" />

        <Preference
            android:key="pref_icon_size_scale"
            android:title="@string/icon_size_title"
            android:summary="@string/icon_size_default"
            android:layout="@layout/preference_icon_size"
            launcher:iconSpaceReserved="false" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
