<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:launcher="http://schemas.android.com/apk/res-auto"
    android:title="@string/colors_title">

    <PreferenceCategory
        android:title="@string/colors_drawer_category"
        launcher:iconSpaceReserved="false">

        <com.android.launcher3.settings.ColorPickerPreference
            android:key="pref_drawer_bg_color"
            android:title="@string/drawer_bg_color_title"
            launcher:iconSpaceReserved="false" />

        <com.android.launcher3.settings.M3SliderPreference
            android:key="pref_drawer_bg_opacity"
            android:title="@string/drawer_bg_opacity_title"
            android:defaultValue="100"
            android:max="100"
            launcher:min="0"
            launcher:showSeekBarValue="true"
            launcher:iconSpaceReserved="false" />

        <com.android.launcher3.settings.ColorPickerPreference
            android:key="pref_drawer_scrollbar_color"
            android:title="@string/drawer_scrollbar_color_title"
            launcher:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/colors_search_category"
        launcher:iconSpaceReserved="false">

        <com.android.launcher3.settings.ColorPickerPreference
            android:key="pref_drawer_search_bg_color"
            android:title="@string/drawer_search_bg_color_title"
            launcher:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_tabs"
        android:title="@string/colors_tabs_category"
        launcher:iconSpaceReserved="false">

        <com.android.launcher3.settings.ColorPickerPreference
            android:key="pref_drawer_tab_selected_color"
            android:title="@string/drawer_tab_selected_color_title"
            launcher:iconSpaceReserved="false" />

        <com.android.launcher3.settings.ColorPickerPreference
            android:key="pref_drawer_tab_unselected_color"
            android:title="@string/drawer_tab_unselected_color_title"
            launcher:iconSpaceReserved="false" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
