<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:launcher="http://schemas.android.com/apk/res-auto">

    <!-- One row per configurable home screen widget. Add more rows here. -->
    <Preference
        android:key="pref_clock_widget"
        android:icon="@drawable/ic_settings_clock"
        android:layout="@layout/preference_widget_entry"
        android:title="@string/clock_widget_title"
        android:summary="@string/clock_widget_summary"
        android:fragment="com.android.launcher3.settings.ClockWidgetFragment"
        launcher:iconSpaceReserved="true" />

    <Preference
        android:key="pref_search_widget"
        android:icon="@drawable/ic_settings_search"
        android:layout="@layout/preference_widget_entry"
        android:title="@string/search_widget_settings_title"
        android:summary="@string/search_widget_settings_summary"
        android:fragment="com.android.launcher3.settings.SearchWidgetFragment"
        launcher:iconSpaceReserved="true" />

</androidx.preference.PreferenceScreen>
